--- a/week-02/day-1/problem4/problem4.css
+++ b/week-02/day-1/problem4/problem4.css
@@ -1,5 +1,11 @@
+
+div{
+  overflow: hidden;
+  width: 60%;
+}
+
 .columns {
-  width: 300px;
+  width: 450px;
   padding: 10px;
   margin: 10px;
 }
@@ -13,9 +19,57 @@ p {
 img{
   float: left;
   padding: 10px;
-
+  margin-bottom: 35px;
 }
 
 #ketteske {
   float: right;
+}
+
+
+
+.message{
+  position:absolute;
+  width: 18%;
+  left: 15%;
+  background-color: white;
+  border: solid;
+  border-radius: 15px;
+  top: 80px;
+  left: 170px;
+  overflow: visible;
+
+}
+
+.x{
+  text-align: center;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  padding: 0px;
+  margin: 0px;
+  width: 25px;
+  position: absolute;
+  right: 20px;
+  top: -10px;
+}
+
+.line1{
+  color: red;
+  padding: 1;
+  margin: 0;
+}
+
+.buttons{
+  padding-left: 50%;
+}
+
+.inline{
+  display: inline-block;
+  background-color: grey;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 5px;
+  margin: 6px;
+  border-style: hidden;
 }
