--- a/week-09/springstart/src/main/resources/templates/greeting.html
+++ b/week-09/springstart/src/main/resources/templates/greeting.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<p th:text="'Hello, ' + ${name} + '! This site was loaded ' + ${counter} +  ' times since last server start.' "/>
+<ul>
+    <li th:each="hello : ${hellos}" th:style="|color:${colors[random.nextInt(50)]}; font-size:${random.nextInt(50)}px|" th:text="${hello} + ', World!'">
+
+    </li>
+</ul>
 </body>
 </html>
