--- a/week-10/Reddit/src/main/resources/templates/posts/new.html
+++ b/week-10/Reddit/src/main/resources/templates/posts/new.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html layout:decorator="layout" xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
 <div layout:fragment="content">
-    <form method="post" name="comment_form" id="comment_form" action="/posts/create" role="form">
+    <form method="post" name="comment_form" id="comment_form"  role="form" action="/posts/create">
         <div class="form-group">
             <label for="message">Post</label>
             <textarea rows="5" class="form-control" id="message" name="message"/>
         </div>
         <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <form method="get" role="form" action="/posts">
+    <button type="submit" id="back" class="btn btn-primary" action="/posts/">Back</button>
     </form>
 </div>
 </html>
