--- a/week-10/Reddit/src/main/resources/templates/posts/edit.html
+++ b/week-10/Reddit/src/main/resources/templates/posts/edit.html
@@ -3,8 +3,10 @@
 <div layout:fragment="content">
     <form method="post" name="comment_form" id="comment_form" action="/posts/update" role="form">
         <div class="form-group">
-            <label for="message">Post</label>
+            <label for="message">Title</label>
             <textarea rows="5" class="form-control" id="message" name="message" th:text="${post.message}"/>
+            <label for="content">Content</label>
+            <textarea rows="5" class="form-control" id="content" name="content" th:text="${post.content}"/>
         </div>
         <input type="hidden" id="post_id" rows="5" class="form-control" name="post_id" th:value="${post.id}"/>
         <button type="submit" id="submit" class="btn btn-primary">Submit</button>
