--- a/week-10/Reddit/src/main/resources/templates/posts/new.html
+++ b/week-10/Reddit/src/main/resources/templates/posts/new.html
@@ -3,8 +3,11 @@
 <div layout:fragment="content">
     <form method="post" name="comment_form" id="comment_form"  role="form" action="/posts/create">
         <div class="form-group">
-            <label for="message">Post</label>
+            <label for="message">Title</label>
             <textarea rows="5" class="form-control" id="message" name="message"/>
+
+            <label for="content">Content</label>
+            <textarea rows="5" class="form-control" id="content" name="content"/>
         </div>
         <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </form>
@@ -13,3 +16,6 @@
     </form>
 </div>
 </html>
+
+
+
