Reddit app: design kinda OK

--- a/week-10/Reddit/src/main/resources/templates/layout.html
+++ b/week-10/Reddit/src/main/resources/templates/layout.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" >MyReddit</a>
+            <a class="navbar-brand" href="#" >MyReddit a.k.a. Error House</a>
         </div>
     </div>
 </nav>
