--- a/week-10/Reddit/src/main/resources/templates/posts/list.html
+++ b/week-10/Reddit/src/main/resources/templates/posts/list.html
@@ -12,7 +12,7 @@
             <th>Score</th>
             <th></th>
             <th>Title</th>
-            <th>Content</th>
+            <th>Contents</th>
             <th></th>
 
         </tr>
@@ -49,5 +49,6 @@
         </tr>
         </tbody>
     </table>
+    <a class="btn btn-primary" href="#">Next page</a>
 </div>
 </html>
