--- a/week-10/Reddit/src/main/resources/static/css/sticky-footer-navbar.css
+++ b/week-10/Reddit/src/main/resources/static/css/sticky-footer-navbar.css
@@ -14,11 +14,13 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    background-color: #7CD385;
+    background-color: #bfffb6;
 }
 
 .navbar {
-    background-color: #7CD385;
+    background-color: #bfffb6;
+    opacity: 0.6;
+
 }
 
 
